[package]
name = "nyxshare"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
console_error_panic_hook = "0.1.6"
getrandom = { version = "0.2.2", features = ["js"] }
rand = "0.8.3"
wasm-bindgen = "0.2.71"
web-sys = "0.3.48"
wee_alloc = "0.4.5"
yew = "0.17.4"
yewtil = "0.3.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
